# Ami

./: .gitignore  README.md  compile_flags.txt  meson.build
.github/workflows/: automation_test.yml
include/ami/: activation_layer.hpp  fully_connected_layer.hpp  gate.hpp  network.hpp  node.hpp  perceptron.hpp
include/ami/activation_function/: relu.hpp  sigmoid.hpp
include/ami/concepts/: abstract_layer.hpp  activation_function.hpp  execution_policy.hpp  layer.hpp  optimizer.hpp  valid_network.hpp
include/ami/layer/: activation_layer.hpp  dense_layer.hpp  dropout_layer.hpp
include/ami/layer/component/: bias.hpp  node.hpp
include/ami/loss_function/: mse.hpp
include/ami/optimizer/: adam.hpp  momentum.hpp
include/ami/utility/: atomic_operation.hpp  atomic_operaton.hpp  composited_t.hpp  indices.hpp  make_array.hpp  parallel_algorithm.hpp  to_span.hpp
test/: meson.build
test/src/: fully_connected_layer.cc  gate_double.cc  gate_single.cc  meson.build  network.cc  node.cc  perceptron.cc
test/src/concepts/: activation_function.cc  execution_policy.cc  meson.build
test/src/layer/: activation_layer.cc  dense_layer.cc  dropout_layer.cc  meson.build
test/src/layer/component/: bias.cc  node.cc
test/src/optimizer/: adam.cc  meson.build  momentum.cc
test/src/utility/: atomic_operation.cc  indices.cc  meson.build  parallel_algorithm.cc
