test('activation_function_test', executable('activation_function_test', 'activation_function.cc', dependencies: test_dep, include_directories: include_dir))

test('execution_policy_test', executable('execution_policy_test', 'execution_policy.cc', dependencies: test_dep, include_directories: include_dir))
