test('node_test', executable('node_test', 'component/node.cc', dependencies: test_dep, include_directories: include_dir))
test('bias_test', executable('bias_test', 'component/bias.cc', dependencies: test_dep, include_directories: include_dir))

test('dense_layer_test', executable('dense_layer_test', 'dense_layer.cc', dependencies: test_dep, include_directories: include_dir))
test('activation_layer_test', executable('activation_layer_test', 'activation_layer.cc', dependencies: test_dep, include_directories: include_dir))
test('dropout_layer_test', executable('dropout_layer_test', 'dropout_layer.cc', dependencies: test_dep, include_directories: include_dir))
