test('parallel_algorithm_test', executable('parallel_algorithm_test', 'parallel_algorithm.cc', dependencies: [test_dep, thread_dep], include_directories: include_dir))
test('atomic_operation_test', executable('atomic_operation_test', 'atomic_operation.cc', dependencies: [test_dep, thread_dep], include_directories: include_dir))
